feat: harden task scheduler
